--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>My app</title>
+    <title>Kudzu</title>
+    <link rel="icon" type="image/png" href="assets/kudzulogo.png">
+
+
     <meta charset="UTF-8" />
     <base href="/">
   </head>
